[package]
name = "rustbox2"
version = "0.0.1"
authors = ["Greg Chapple <gregchapple1@gmail.com>"]
description = "A rust implementation of the termbox2 library"
repository = "https://github.com/yymirror/rustbox2"
homepage = "https://github.com/yymirror/rustbox2"
readme = "README.md"
license = "MIT"
keywords = [
    "termbox2",
    "terminal",
    "gui",
]
exclude = [
    "examples/*"
]

[lib]
name = "rustbox2"

[dependencies.termbox-sys2]
git = "https://github.com/yymirror/termbox-sys2.git"

[dependencies]
bitflags = "0.2.1"
gag = "0.1.6"
num = "0.1.13"
libc = "0.1.10"
